# glac

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.client  Dockerfile.server  README.md  agent.ts  cloudbuild.yaml  docker-compose.yml  eslint.config.mjs  package.json  pyproject.toml  tsconfig.json
.github/workflows/: deploy.yml
agent/: main.py  model.py  settings.py
glac/: __init__.py  agent.py  settings.py
infra/: .terraform.lock.hcl  locals.tf  main.tf  providers.tf  variables.tf
src/adk/: rootAgent.ts
src/adk/tools/: generateVideoTool.ts
src/app/: layout.tsx  page.tsx
src/app/api/copilotkit/: route.ts
src/components/: proverbs.tsx  weather.tsx
src/veo/: client.ts  generateVideo.ts
