[project]
name = "glac"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Mina Sami", email = "sami.mg@outlook.com" }]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Information Technology",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "fastapi>=0.110",
  "google-adk>=1.25.1",
  "httpx>=0.28.1",
  "Jinja2>=3.1.6",
  "pydantic-settings>=2.10.1",
  "uvicorn>=0.23",
]

[project.optional-dependencies]
dev = [
  "bandit[toml]>=1.9.3",
  "mypy>=1.19.1",
  "pytest>=9.0.0",
  "pytest-cov>=6.1.0",
  "pre-commit>=4.5.1",
  "ruff>=0.15.0",
]

[build-system]
requires = ["hatchling>=1.28.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "glac/__init__.py"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = false

[tool.bandit]
exclude_dirs = ["tests"]

[tool.pytest.ini_options]
addopts = "--cov=glac --cov-report=term-missing --cov-report=xml"
