[project]
name = "agent"
dynamic = ["version"]
description = "ADK Proverbs Agent with shared state"
requires-python = ">=3.12"
authors = [{ name = "Mina Sami", email = "sami.mg@outlook.com" }]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Information Technology",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
    "ag-ui-adk",
    "fastapi",
    "google-adk",
    "google-genai",
    "pydantic",
    "pydantic-settings>=2.10.1",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
  "bandit[toml]>=1.9.3",
  "mypy>=1.19.1",
  "pytest>=9.0.0",
  "pytest-cov>=6.1.0",
  "pre-commit>=4.5.1",
  "ruff>=0.15.0",
]

[build-system]
requires = ["hatchling>=1.28.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "agent/__init__.py"

[project.scripts]
app = "agent.main:main"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["ag_ui_adk.*"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]

[tool.pytest.ini_options]
addopts = "--cov=agent --cov-report=term-missing --cov-report=xml"
